--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
-    "@types/react": "^16.9.49",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.21.0",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
@@ -22,8 +23,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
